--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".BucketListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
         </activity>
         <activity
             android:name=".AddItemActivity"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".BucketListActivity"
             android:label="@string/app_name">
         </activity>
     </application>
